syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.between.products.adapter.in.grpc.proto";

package product;

service ProductService {
  rpc getSimilarProducts(GetProduct) returns (ProductResponse);
}

message GetProduct {
  string productId = 1;
}

message ProductResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  bool availability = 4;
}
